Added currency code and rates to html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <th>Valyuta nomi</th>
                 <th>Miqdori</th>
             </thead>
-            <tbody class="table-body">
+            <tbody id="table-body">
                 <tr>
                     <td>USD</td>
                     <td>1</td>
